# drone-sim

./: .gitignore  .gitmodules  README.md  flake.nix  setup.sh  start.sh
dev/src/px4_offboard_cpp/: CMakeLists.txt  package.xml
dev/src/px4_offboard_cpp/src/: offboard_control.cpp
flakes/micro-xrce-dds-agent/: default.nix
flakes/px4-msgs/: default.nix
micro-xrce-dds-agent/: default.nix
px4-autopilot/: default.nix
px4-msgs/: default.nix
ros2/: default.nix
